[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Enemy 6.gd" type="Script" id=1]
[ext_resource path="res://scenes/Vehicle6 Model.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Durability Bar.tscn" type="PackedScene" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.676524, 1, 1.24025 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="SphereMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="SphereMesh" id=5]

[node name="Enemy 6" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.8, 0, 0, 0, 0.6, 0, 0, 0, 0.8, 0, 0.430199, 0 )
shape = SubResource( 1 )

[node name="Vehicle6 Model" parent="CollisionShape" instance=ExtResource( 2 )]
transform = Transform( -0.25, 0, -2.18557e-08, 0, 0.25, 0, 2.18557e-08, 0, -0.25, 0.103593, -1.01332, -0.0620967 )

[node name="Firepoint" type="Spatial" parent="CollisionShape"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000290612, 0.112287, -1.75818 )

[node name="MeshInstance" type="MeshInstance" parent="CollisionShape/Firepoint"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0.157259 )
visible = false
material_overlay = SubResource( 2 )
mesh = SubResource( 3 )

[node name="Firepoint2" type="Spatial" parent="CollisionShape"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.293154, 0.112287, -1.75818 )

[node name="MeshInstance" type="MeshInstance" parent="CollisionShape/Firepoint2"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0.157259 )
visible = false
material_overlay = SubResource( 2 )
mesh = SubResource( 3 )

[node name="Firepoint3" type="Spatial" parent="CollisionShape"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.308022, 0.112287, -1.75818 )
visible = false

[node name="MeshInstance" type="MeshInstance" parent="CollisionShape/Firepoint3"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0.157259 )
material_overlay = SubResource( 2 )
mesh = SubResource( 3 )

[node name="Firepoint4" type="Spatial" parent="CollisionShape"]
transform = Transform( 1.25, 0, 0, 0, 1.66667, 0, 0, 0, 1.25, -0.166515, 0.872964, -1.95609 )

[node name="MeshInstance" type="MeshInstance" parent="CollisionShape/Firepoint4"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0.157259 )
visible = false
material_overlay = SubResource( 4 )
mesh = SubResource( 5 )

[node name="Firepoint5" type="Spatial" parent="CollisionShape"]
transform = Transform( 1.25, 0, 0, 0, 1.66667, 0, 0, 0, 1.25, 0.210204, 0.872964, -1.95609 )

[node name="MeshInstance" type="MeshInstance" parent="CollisionShape/Firepoint5"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0.157259 )
visible = false
material_overlay = SubResource( 4 )
mesh = SubResource( 5 )
skeleton = NodePath("../../Firepoint4")

[node name="Firepoint6" type="Spatial" parent="CollisionShape"]
transform = Transform( 1.25, 0, 0, 0, 1.66667, 0, 0, 0, 1.25, -0.166515, 0.440071, -1.95609 )

[node name="MeshInstance" type="MeshInstance" parent="CollisionShape/Firepoint6"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0.157259 )
visible = false
material_overlay = SubResource( 4 )
mesh = SubResource( 5 )
skeleton = NodePath("../../Firepoint4")

[node name="Firepoint7" type="Spatial" parent="CollisionShape"]
transform = Transform( 1.25, 0, 0, 0, 1.66667, 0, 0, 0, 1.25, 0.210204, 0.440071, -1.95609 )

[node name="MeshInstance" type="MeshInstance" parent="CollisionShape/Firepoint7"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0.157259 )
visible = false
material_overlay = SubResource( 4 )
mesh = SubResource( 5 )

[node name="DirectionTimer" type="Timer" parent="."]
autostart = true

[node name="Durability Bar" parent="." instance=ExtResource( 3 )]
transform = Transform( 0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 1.5, 0 )

[connection signal="timeout" from="DirectionTimer" to="." method="_on_DirectionTimer_timeout"]
